force-app/main/default/objects/Asset/fields/TotalUsage__c.field-meta.xml
<CustomField>
    <fullName>TotalUsage__c</fullName>
    <label>TotalUsage</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>