force-app/main/default/objects/Asset/fields/TotalUsageUOM__c.field-meta.xml
<CustomField>
    <fullName>TotalUsageUOM__c</fullName>
    <label>TotalUsageUOM</label>
    <type>Text</type>
    <length>255</length>
</CustomField>